<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>cloud.cleo.chimesma.squareup</groupId>
    <artifactId>parent-pom</artifactId>
    <packaging>pom</packaging>
    <version>1.0</version>
    <name>Spring AI Square Chime SMA Parent POM</name>
    <description>Top Level POM for Spring AI Square Chime Project</description>
    
    <organization>
        <name>CLEO Cloud Solutions</name>
        <url>https://cleo.cloud</url>
    </organization>
    
    <developers>
        <developer>
            <name>Steve Jensen</name>
            <email>steve@cleo.cloud</email>
            <organization>CLEO Cloud Solutions</organization>
            <organizationUrl>https://www.cleo.cloud</organizationUrl>
            <timezone>America/Chicago</timezone>
            <url>https://www.linkedin.com/in/stevejensenaws</url>
        </developer>
    </developers>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>25</maven.compiler.release>
        <lombok.version>1.18.46</lombok.version>
        <pdfbox.version>3.0.7</pdfbox.version>
        <okhttp.jvm.version>5.3.2</okhttp.jvm.version>
        <okio.jvm.version>3.17.0</okio.jvm.version>
        <!-- The below three all need to be aligned -->
        <spring.boot.version>4.0.6</spring.boot.version>
        <spring.cloud.version>5.0.1</spring.cloud.version>
        <spring.ai.version>2.0.0-M7</spring.ai.version>
    </properties>
    
    
    <modules>
        <!-- We need Chime SMA flow and event and prompt creation libraries -->
        <module>ChimeSMALibrary</module>
        <!-- Provision Chime Resources -->
        <module>ChimeCDKProvision</module>
        <!-- These are part of the local project  (not git sub-modules) -->
        <module>SpringAI</module>
        <module>ChimeSMA</module>
        <module>Wahkon</module>
    </modules>

    <dependencyManagement>
        <dependencies>

            <!-- AWS BOM for all AWS services versioning --> 
            <dependency>
                <groupId>software.amazon.awssdk</groupId>
                <artifactId>bom</artifactId>
                <version>2.44.12</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            
            
            <dependency>
                <groupId>com.amazonaws</groupId>
                <artifactId>aws-lambda-java-core</artifactId>
                <version>1.4.0</version>
            </dependency>
            
            <dependency>
                <groupId>com.amazonaws</groupId>
                <artifactId>aws-lambda-java-events</artifactId>
                <version>3.16.1</version>
            </dependency>
                      
            <!-- Lambda Logging --> 
            <dependency>
                <groupId>com.amazonaws</groupId>
                <artifactId>aws-lambda-java-log4j2</artifactId>
                <version>1.6.4</version>
            </dependency>
  
            
            <!-- Spring Boot BOM  -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            
            <!-- Spring Cloud for Lambda Support of Cloud Functions in AWS -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-function-dependencies</artifactId>
                <version>${spring.cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            
            <!-- Spring AI BOM -->
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring.ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            
           
            <!-- Square Lib --> 
            <dependency>
                <groupId>com.squareup</groupId>
                <artifactId>square</artifactId>
                <version>46.1.0.20260520</version>
            </dependency>
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>okhttp-jvm</artifactId>
                <version>${okhttp.jvm.version}</version>
            </dependency>
            <dependency>
                <groupId>com.squareup.okio</groupId>
                <artifactId>okio-jvm</artifactId>
                <version>${okio.jvm.version}</version>
            </dependency>
            
            <!-- used for web crawling sites -->
            <dependency>
                <groupId>org.jsoup</groupId>
                <artifactId>jsoup</artifactId>
                <version>1.22.2</version>
            </dependency>
            
            <!-- used for web crawling to process Text extraction on PDF -->
            <dependency>
                <groupId>org.apache.pdfbox</groupId>
                <artifactId>pdfbox</artifactId>
                <version>${pdfbox.version}</version>
                <exclusions>
                    <exclusion>
                        <!-- Exclude since Spring Boot takes care of this -->
                        <groupId>commons-logging</groupId>
                        <artifactId>commons-logging</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <!-- For extracting Meta Data on PDF's -->
            <dependency>
                <groupId>org.apache.pdfbox</groupId>
                <artifactId>xmpbox</artifactId>
                <version>${pdfbox.version}</version>
                <exclusions>
                    <exclusion>
                        <!-- Exclude since Spring Boot takes care of this -->
                        <groupId>commons-logging</groupId>
                        <artifactId>commons-logging</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            
          
            <!-- Test reports -->
            <dependency>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-bom</artifactId>
                <version>2.34.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
                
        
        </dependencies>
    </dependencyManagement>
    
    <dependencies>
        <dependency>
            <!-- Use across all sub modules -->
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
    
    </dependencies>
     
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>io.qameta.allure</groupId>
                    <artifactId>allure-maven</artifactId>
                    <version>3.0.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.5</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>3.5.5</version>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring.boot.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.15.0</version>
                    <configuration>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.6.2</version>
                    <configuration>
                        <createDependencyReducedPom>false</createDependencyReducedPom>
                        <filters>
                            <filter>
                                <artifact>*:*</artifact>
                                <excludes>
                                    <exclude>module-info.class</exclude>
                                    <exclude>META-INF/LICENSE*</exclude>
                                    <exclude>META-INF/NOTICE*</exclude>
                                    <exclude>META-INF/DEPENDENCIES*</exclude>
                                    <exclude>codegen-resources/</exclude>
                                </excludes>
                            </filter>
                        </filters>
                    </configuration>
                    <executions>
                        <execution>
                            <phase>package</phase>
                            <goals>
                                <goal>shade</goal>
                            </goals>
                            <configuration>
                                <transformers>
                                    <transformer implementation="org.apache.logging.log4j.maven.plugins.shade.transformer.Log4j2PluginCacheFileTransformer"/>
                                    <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                        <manifestEntries>
                                            <Multi-Release>true</Multi-Release>
                                        </manifestEntries>
                                    </transformer>
                                </transformers>
                            </configuration>
                        </execution>
                    </executions>
                    <dependencies>
                        <dependency>
                            <groupId>org.apache.logging.log4j</groupId>
                            <artifactId>log4j-transform-maven-shade-plugin-extensions</artifactId>
                            <version>0.2.0</version>
                        </dependency>
                    </dependencies>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    
</project>
